--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -119,4 +119,18 @@ year = {2008},
 doi = {10.1063/1.2899649}
 }
 
+@article{mahan1980,
+  title = {Modified Sternheimer equation for polarizability},
+  author = {Mahan, G. D.},
+  journal = {Phys. Rev. A},
+  volume = {22},
+  issue = {5},
+  pages = {1780--1785},
+  numpages = {0},
+  year = {1980},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.22.1780},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.22.1780}
+}
 
