--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -188,9 +188,9 @@ For open boundary conditions in three dimensions, the kernel of $\op G_H(\omega)
 % \right. \;,
 % \ee
 \be\lb{HelmholtzKernelDef1}
-\bra{\r} \op G_H(k^2) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
-\frac{e^{2k|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; k < 0\; \\ 
-\frac{e^{2\ii k |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; k > 0
+\bra{\r} \op G_H(\omega) \ket{\r'} = \frac{1}{4\pi} \begin{cases}
+\frac{e^{2k|\r - \r' |}}{|\r- \r' |} \;,\; & {\textrm for}\; k^2 = \omega  < 0\; \\ 
+\frac{e^{2\ii k |\r-\r' |}}{|\r-\r' |} \;, & {\textrm for} \; k^2 = \omega > 0
 \end{cases} \;,
 \ee
 and the $\r$-representation of the fluctuation states $f_p(\omega,\r)$ is expressed through a convolution integral between the kernel \eqref{HelmholtzKernelDef1} and
